// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase should render anchor element correctly by href and externalLink, href target and rel exist 1`] = `
<div>
  <a
    class="box mm-button-base mm-button-base--size-md box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-text-default box--background-color-background-alternative box--rounded-pill"
    data-testid="button-base"
    href="https://www.test.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="box mm-text mm-button-base__content mm-text--body-md mm-text--color-inherit box--gap-2 box--flex-direction-row box--justify-content-center box--align-items-center box--display-flex"
    >
      Button Base
    </span>
  </a>
</div>
`;

exports[`ButtonBase should render button element correctly and match snapshot 1`] = `
<div>
  <button
    class="box mm-button-base mm-button-base--size-md box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-text-default box--background-color-background-alternative box--rounded-pill"
    data-testid="button-base"
  >
    <span
      class="box mm-text mm-button-base__content mm-text--body-md mm-text--color-inherit box--gap-2 box--flex-direction-row box--justify-content-center box--align-items-center box--display-flex"
    >
      Button base
    </span>
  </button>
</div>
`;
